--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
       <version>1.18.30</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.0-jre</version>
+    </dependency>
 
   </dependencies>
 
